[gd_scene load_steps=24 format=2]

[ext_resource path="res://ui/graphics/setup/tutorial/browser.png" type="Texture" id=1]
[ext_resource path="res://ui/fonts/3D Drawn.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://ui/themes/default_button.tres" type="Theme" id=3]
[ext_resource path="res://ui/graphics/setup/tutorial/user_outline.png" type="Texture" id=4]
[ext_resource path="res://ui/graphics/setup/tutorial/user_on_computer.png" type="Texture" id=5]
[ext_resource path="res://ui/graphics/setup/tutorial/admin.png" type="Texture" id=6]
[ext_resource path="res://ui/graphics/setup/tutorial/admin_outline.png" type="Texture" id=7]
[ext_resource path="res://scenes/setup/tutorial.gd" type="Script" id=8]
[ext_resource path="res://ui/graphics/setup/tutorial/restrict.png" type="Texture" id=9]
[ext_resource path="res://ui/graphics/setup/tutorial/transfer.png" type="Texture" id=10]
[ext_resource path="res://scenes/cbar.gd" type="Script" id=11]
[ext_resource path="res://ui/fonts/Arial.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://ui/graphics/setup/tutorial/add.png" type="Texture" id=13]
[ext_resource path="res://ui/graphics/setup/tutorial/remove.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=10]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=16]
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=21]
size = 18
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=19]
size = 13
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=20]
resource_name = "3rd_page"
length = 2.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("..:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -1024, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../../page3:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1024, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../../page3/add:rect_position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 192, -0.25, 0, 0.1, 19.4103, 264, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.6, 0.9 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../../page3/add:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.6, 0.9 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("../../page3/remove:rect_position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 336, -0.25, 0, 0, -30.4645, 264, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 1.3 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("../../page3/remove:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 1.3 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("../../page3/restrict:rect_position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 200, -0.25, 0, 0, 31.5772, 264, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.4, 1.7 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("../../page3/restrict:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.4, 1.7 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("../../page3/transfer:rect_position:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 336, -0.25, 0, 0, -40.5339, 264, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.8, 2.1 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("../../page3/transfer:modulate:a")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.8, 2.1 )
}

[sub_resource type="Animation" id=18]
resource_name = "admin_outline"
tracks/0/type = "bezier"
tracks/0/path = NodePath("../admin_outline_graphic:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.2, 0.478582, 0.607843, -0.2, 0.591113, 0.25, 0 ),
"times": PoolRealArray( 0.6, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../admin_outline_graphic:rect_size:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.1, 501.33, 632, -0.3, 62.822, 0.25, 0 ),
"times": PoolRealArray( 0.6, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../admin_outline_text:rect_position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 288, -0.25, 0, 0.25, 0, 344, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.6, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../admin_outline_text:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.6, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("../user_outline_graphic:rect_size:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 624, -0.4, 70.0725, 0.25, 0, 0, -0.25, 0, 0.1, 176.303 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("../user_outline_graphic:modulate:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0.607843, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath(".:rect_position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 288, -0.4, -0.276184, 0.25, 0, 336, -0.25, 0, 0.1, 39.7477 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("../../back:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 608 ), Vector2( 16, 563 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "welcome_label"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("../../welcome_label:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -32, -0.25, 0, 0.1, 27.15, 8, -0.3, -3.60687, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../../welcome_label:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.1, 0.595405, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../browser_example:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 640, -0.25, 0, 0.1, -45.5169, 576, -0.4, 4.59363, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../browser_example:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.3, 0.541101, 1, -0.4, -0.0140361, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 1.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("../user_outline_graphic:rect_size:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.1, 176.303, 624, -0.4, 50.044, 0.25, 0 ),
"times": PoolRealArray( 1, 1.5 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("../user_outline_graphic:modulate:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.2, 0.332016, 0.607843, -0.2, 0.629858, 0.25, 0 ),
"times": PoolRealArray( 1, 1.5 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath(".:rect_position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 240, -0.25, 0, 0.1, 39.7477, 288, -0.4, -0.276184, 0.25, 0 ),
"times": PoolRealArray( 1, 1.5 )
}

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 12 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="backround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.997
margin_bottom = 1.79999
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="welcome_label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 184.0
margin_top = -32.0
margin_right = 840.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 10 )
text = "WELCOME TO ASPHALEIA BROWSER INTRO"
align = 1
valign = 1
autowrap = true

[node name="page" type="Control" parent="."]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 536.0

[node name="browser_example" type="TextureRect" parent="page"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 640.0
margin_top = 232.0
margin_right = 1024.0
margin_bottom = 472.0
rect_clip_content = true
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="user_outline_graphic" type="TextureRect" parent="page"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 336.0
margin_top = 232.0
margin_right = 336.0
margin_bottom = 472.0
rect_clip_content = true
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="user_outline_text" type="Label" parent="page"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 96.0
margin_top = 240.0
margin_right = 448.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 15 )
text = "This is the home page. This is where the student can access the currated websites. You can also add additional websites here later in settings."
autowrap = true

[node name="user" type="Sprite" parent="page/user_outline_text"]
position = Vector2( 128, -57 )
texture = ExtResource( 5 )

[node name="admin_outline_graphic" type="TextureRect" parent="page"]
modulate = Color( 0, 0.505882, 1, 0 )
margin_left = 328.0
margin_top = 232.0
margin_right = 328.0
margin_bottom = 464.0
rect_clip_content = true
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="admin_outline_text" type="Label" parent="page"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 112.0
margin_top = 288.0
margin_right = 440.0
margin_bottom = 351.0
custom_fonts/font = SubResource( 16 )
text = "These two buttons are for the administrators. The first button is the Settings and the second button is Google Chrome."
autowrap = true

[node name="admin" type="Sprite" parent="page/admin_outline_text"]
position = Vector2( 116, -48 )
texture = ExtResource( 6 )

[node name="page3" type="Control" parent="."]
margin_left = 1024.0
margin_top = 32.0
margin_right = 2048.0
margin_bottom = 536.0

[node name="add" type="Label" parent="page3"]
modulate = Color( 0.698039, 0.980392, 1, 0 )
margin_left = 136.0
margin_top = 192.0
margin_right = 216.0
margin_bottom = 213.0
custom_fonts/font = SubResource( 21 )
text = "Add."
align = 1
valign = 1

[node name="Add" type="Sprite" parent="page3/add"]
position = Vector2( 40, -48 )
texture = ExtResource( 13 )

[node name="description" type="Label" parent="page3/add"]
margin_left = -32.0
margin_top = 40.0
margin_right = 112.0
margin_bottom = 122.0
text = "You can always add more websites in settings if the default selection of websites is not sufficient."
align = 1
autowrap = true

[node name="remove" type="Label" parent="page3"]
modulate = Color( 1, 0.556863, 0.521569, 0 )
margin_left = 360.0
margin_top = 336.0
margin_right = 440.0
margin_bottom = 357.0
custom_fonts/font = SubResource( 21 )
text = "Remove."
align = 1
valign = 1

[node name="Remove" type="Sprite" parent="page3/remove"]
position = Vector2( 40, -48 )
texture = ExtResource( 14 )

[node name="description" type="Label" parent="page3/remove"]
margin_left = -40.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 139.0
text = "If you do not want the user to have access to a specific default or added website you can simply go to settings and disable/hide it."
align = 1
autowrap = true

[node name="restrict" type="Label" parent="page3"]
modulate = Color( 1, 0.647059, 0.415686, 0 )
margin_left = 584.0
margin_top = 200.0
margin_right = 664.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 21 )
text = "Restrict."
align = 1
valign = 1

[node name="Restrict" type="Sprite" parent="page3/restrict"]
position = Vector2( 40, -48 )
texture = ExtResource( 9 )

[node name="description" type="Label" parent="page3/restrict"]
margin_left = -40.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 156.0
text = "If you want the user to have restricted access to a website: you can restrict the given website in settings so that your permission will be required to open it."
align = 1
autowrap = true

[node name="transfer" type="Label" parent="page3"]
modulate = Color( 0.756863, 1, 0.490196, 0 )
margin_left = 808.0
margin_top = 336.0
margin_right = 888.0
margin_bottom = 357.0
custom_fonts/font = SubResource( 21 )
text = "Transfer."
align = 1
valign = 1

[node name="Transfer" type="Sprite" parent="page3/transfer"]
position = Vector2( 40, -48 )
texture = ExtResource( 10 )

[node name="description" type="Label" parent="page3/transfer"]
margin_left = -48.0
margin_top = 40.0
margin_right = 128.0
margin_bottom = 88.0
text = "When finished making changes, you can transfer them to another computer."
align = 1
autowrap = true

[node name="next" type="Button" parent="."]
margin_left = 944.0
margin_top = 552.0
margin_right = 1008.0
margin_bottom = 584.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Next"

[node name="back" type="Button" parent="."]
margin_left = 16.0
margin_top = 608.0
margin_right = 58.0
margin_bottom = 629.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 0, 0.552941, 1, 1 )
custom_fonts/font = SubResource( 19 )
text = "Back"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../page/user_outline_text")
autoplay = "welcome_label"
anims/3rd_page = SubResource( 20 )
anims/admin_outline = SubResource( 18 )
anims/welcome_label = SubResource( 13 )

[node name="cbar" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="cbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 998.499
margin_top = 2.584
margin_right = -2.50098
margin_bottom = -4.416
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "X"
flat = true

[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_started"]
[connection signal="gui_input" from="cbar" to="cbar" method="_on_cbar_gui_input"]
[connection signal="pressed" from="cbar/exit" to="cbar" method="_on_exit_pressed"]
